--- a/index.html
+++ b/index.html
@@ -3,14 +3,23 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <meta name="description" content="Ashton Alva - Computer Science Student & Software Engineer Portfolio">
+  <meta name="description" content="Ashton Alva - Computer Science student at CSU Fullerton. Portfolio showcasing iOS apps, real-time systems, AI/ML projects, and full-stack development.">
   <title>Ashton Alva | Portfolio</title>
+  <!-- Open Graph / Social -->
+  <meta property="og:type" content="website">
+  <meta property="og:title" content="Ashton Alva | Portfolio">
+  <meta property="og:description" content="Computer Science student at CSU Fullerton. iOS, AI/ML, full-stack & real-time systems.">
+  <meta property="og:url" content="https://ashtonalva.github.io/portfolio-site/">
+  <meta name="twitter:card" content="summary_large_image">
+  <meta name="twitter:title" content="Ashton Alva | Portfolio">
+  <meta name="twitter:description" content="Computer Science student at CSU Fullerton. iOS, AI/ML, full-stack & real-time systems.">
+  <link rel="icon" type="image/svg+xml" href="images/favicon.svg">
   <link rel="stylesheet" href="css/style.css">
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700;800&family=Space+Grotesk:wght@400;500;600;700&display=swap" rel="stylesheet">
 </head>
-<body>
+<body class="theme-dark">
   <!-- Navigation -->
   <nav class="navbar" id="navbar">
     <div class="nav-container">
@@ -20,10 +29,21 @@
       <ul class="nav-menu" id="nav-menu">
         <li><a href="#home" class="nav-link">Home</a></li>
         <li><a href="#about" class="nav-link">About</a></li>
+        <li><a href="#education" class="nav-link">Education</a></li>
+        <li><a href="#experience" class="nav-link">Experience</a></li>
         <li><a href="#projects" class="nav-link">Projects</a></li>
         <li><a href="#skills" class="nav-link">Skills</a></li>
+        <li><a href="#certifications" class="nav-link">Certifications</a></li>
         <li><a href="#contact" class="nav-link">Contact</a></li>
-    </ul>
+      </ul>
+      <button type="button" class="theme-toggle" id="theme-toggle" aria-label="Toggle dark/light mode">
+        <span class="theme-icon theme-icon-dark" aria-hidden="true">
+          <svg width="20" height="20" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2"><path d="M21 12.79A9 9 0 1 1 11.21 3 7 7 0 0 0 21 12.79z"/></svg>
+        </span>
+        <span class="theme-icon theme-icon-light" aria-hidden="true">
+          <svg width="20" height="20" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2"><circle cx="12" cy="12" r="5"/><line x1="12" y1="1" x2="12" y2="3"/><line x1="12" y1="21" x2="12" y2="23"/><line x1="4.22" y1="4.22" x2="5.64" y2="5.64"/><line x1="18.36" y1="18.36" x2="19.78" y2="19.78"/><line x1="1" y1="12" x2="3" y2="12"/><line x1="21" y1="12" x2="23" y2="12"/><line x1="4.22" y1="19.78" x2="5.64" y2="18.36"/><line x1="18.36" y1="5.64" x2="19.78" y2="4.22"/></svg>
+        </span>
+      </button>
       <div class="nav-toggle" id="nav-toggle">
         <span></span>
         <span></span>
@@ -51,9 +71,11 @@
           I enjoy building innovative solutions including native iOS apps and real-time video streaming systems, constantly 
           exploring new technologies to improve user experiences.
         </p>
+        <p class="hero-looking">Seeking internships and new grad opportunities in software engineering.</p>
         <div class="hero-buttons">
           <a href="#projects" class="btn btn-primary">View My Work</a>
-          <a href="#contact" class="btn btn-secondary">Get In Touch</a>
+          <a href="resume/resume.pdf" class="btn btn-secondary" download target="_blank" rel="noopener noreferrer">Download Resume</a>
+          <a href="#contact" class="btn btn-outline">Get In Touch</a>
         </div>
       </div>
     </div>
@@ -104,16 +126,81 @@
     </div>
   </section>
 
+  <!-- Education Section -->
+  <section id="education" class="education">
+    <div class="container">
+      <div class="section-header">
+        <span class="section-number">02.</span>
+        <h2 class="section-title">Education</h2>
+        <div class="section-line"></div>
+      </div>
+      <div class="education-timeline">
+        <div class="education-item">
+          <div class="education-date">May 2026</div>
+          <h3 class="education-degree">Bachelor of Science in Computer Science</h3>
+          <p class="education-school">California State University, Fullerton</p>
+          <p class="education-location">Fullerton, California</p>
+          <p class="education-coursework">Relevant coursework: Programming Concepts (C++), Data Structures, Operating Systems, Algorithm Engineering, Compilers & Languages, Software Engineering, Cloud Computing, Artificial Intelligence, Mobile App Development, Database Systems</p>
+        </div>
+        <div class="education-item">
+          <div class="education-date">May 2023</div>
+          <h3 class="education-degree">Associate in Math and Science</h3>
+          <p class="education-school">Fullerton College</p>
+          <p class="education-location">Fullerton, California</p>
+          <p class="education-coursework">Transferred to CSU Fullerton after foundational STEM coursework (Calculus I–II, Chemistry, Biology, Intro to Programming)</p>
+        </div>
+      </div>
+    </div>
+  </section>
+
+  <!-- Experience Section -->
+  <section id="experience" class="experience">
+    <div class="container">
+      <div class="section-header">
+        <span class="section-number">03.</span>
+        <h2 class="section-title">Experience</h2>
+        <div class="section-line"></div>
+      </div>
+      <div class="timeline">
+        <div class="timeline-item">
+          <div class="timeline-marker"></div>
+          <div class="timeline-content">
+            <span class="timeline-date">May 2023 – Present</span>
+            <h3 class="timeline-title">Technician, Freelance</h3>
+            <p class="timeline-location">Fullerton, California</p>
+            <ul class="timeline-list">
+              <li>Spearheaded server installations, cabling & troubleshooting to optimize data center efficiency (30% increase)</li>
+              <li>Performed setup, configuration, and migrations of Cisco VoIP phones; streamlined communication (30% efficiency gain)</li>
+              <li>Installed 10+ network equipment installations for clients (Cisco); streamlined POS systems & peripherals (20% efficiency boost)</li>
+              <li>Managed battery testing and replacement for 1900+ barcode, QR code, and RFID hand scanners</li>
+              <li>Drove 35% surge in customer satisfaction via checklists, spot checks, and audits for inventory turnover</li>
+              <li>Supported verification and installation of 30+ client posters and take-ones (Adobe Acrobat, MS Office, Canva)</li>
+            </ul>
+          </div>
+        </div>
+      </div>
+    </div>
+  </section>
+
   <!-- Projects Section -->
   <section id="projects" class="projects">
     <div class="container">
       <div class="section-header">
-        <span class="section-number">02.</span>
+        <span class="section-number">04.</span>
         <h2 class="section-title">Some Things I've Built</h2>
         <div class="section-line"></div>
       </div>
-      <div class="projects-grid">
-        <div class="project-card featured">
+      <div class="project-filters" role="tablist" aria-label="Filter projects">
+        <button type="button" class="filter-btn active" data-filter="all">All</button>
+        <button type="button" class="filter-btn" data-filter="mobile">Mobile</button>
+        <button type="button" class="filter-btn" data-filter="web">Web</button>
+        <button type="button" class="filter-btn" data-filter="ai">AI / ML</button>
+        <button type="button" class="filter-btn" data-filter="fullstack">Full-Stack</button>
+        <button type="button" class="filter-btn" data-filter="other">Other</button>
+      </div>
+      <div class="projects-grid" id="projects-grid">
+        <div class="project-card featured" data-category="mobile">
+          <div class="project-image project-image-ascend"><span class="project-image-placeholder">Ascend</span></div>
           <div class="project-content">
             <p class="project-label">Featured Project</p>
             <h3 class="project-title">Ascend - iOS Workout Tracker</h3>
@@ -143,7 +230,8 @@
           </div>
         </div>
 
-        <div class="project-card featured">
+        <div class="project-card featured" data-category="fullstack">
+          <div class="project-image project-image-edge"><span class="project-image-placeholder">Edge QUIC CV</span></div>
           <div class="project-content">
             <p class="project-label">Featured Project</p>
             <h3 class="project-title">Edge QUIC CV - Real-Time Multi-Feed Video Dashboard</h3>
@@ -174,7 +262,8 @@
           </div>
         </div>
 
-        <div class="project-card featured">
+        <div class="project-card featured" data-category="fullstack">
+          <div class="project-image project-image-cos"><span class="project-image-placeholder">COS</span></div>
           <div class="project-content">
             <p class="project-label">Featured Project</p>
             <h3 class="project-title">Cafeteria Ordering System (COS)</h3>
@@ -204,7 +293,8 @@
           </div>
         </div>
 
-        <div class="project-card">
+        <div class="project-card" data-category="ai">
+          <div class="project-image project-image-rag"><span class="project-image-placeholder">RAG</span></div>
           <div class="project-content">
             <p class="project-label">Project</p>
             <h3 class="project-title">RAG Chatbot with IBM Watsonx</h3>
@@ -230,7 +320,8 @@
           </div>
         </div>
 
-        <div class="project-card">
+        <div class="project-card" data-category="ai">
+          <div class="project-image project-image-ml"><span class="project-image-placeholder">ML</span></div>
           <div class="project-content">
             <p class="project-label">Project</p>
             <h3 class="project-title">Machine Learning Fundamentals</h3>
@@ -255,7 +346,8 @@
           </div>
         </div>
 
-        <div class="project-card">
+        <div class="project-card" data-category="ai">
+          <div class="project-image project-image-watson"><span class="project-image-placeholder">Watson NLP</span></div>
           <div class="project-content">
             <p class="project-label">Project</p>
             <h3 class="project-title">Watson NLP Emotion Detector</h3>
@@ -285,7 +377,8 @@
           </div>
         </div>
 
-        <div class="project-card">
+        <div class="project-card" data-category="other">
+          <div class="project-image project-image-geometry"><span class="project-image-placeholder">Geometry Dash</span></div>
           <div class="project-content">
             <p class="project-label">Project</p>
             <h3 class="project-title">Geometry Dash Clone</h3>
@@ -321,7 +414,7 @@
   <section id="skills" class="skills">
     <div class="container">
       <div class="section-header">
-        <span class="section-number">03.</span>
+        <span class="section-number">05.</span>
         <h2 class="section-title">Skills & Technologies</h2>
         <div class="section-line"></div>
       </div>
@@ -385,11 +478,57 @@
     </div>
   </section>
 
+  <!-- Certifications Section -->
+  <section id="certifications" class="certifications">
+    <div class="container">
+      <div class="section-header">
+        <span class="section-number">06.</span>
+        <h2 class="section-title">Certifications</h2>
+        <div class="section-line"></div>
+      </div>
+      <div class="certifications-grid">
+        <div class="cert-category">
+          <h3 class="cert-category-title">AI & Machine Learning</h3>
+          <ul class="cert-list">
+            <li>Introduction to Artificial Intelligence (AI)</li>
+            <li>Generative AI: Introduction and Applications</li>
+            <li>Generative AI: Prompt Engineering Basics</li>
+            <li>Generative AI and LLMs: Architecture and Data Preparation</li>
+            <li>Gen AI Foundational Models for NLP & Language Understanding</li>
+            <li>Generative AI Language Modeling with Transformers</li>
+            <li>Generative AI Engineering and Fine-Tuning Transformers</li>
+            <li>Generative AI Advanced Fine-Tuning for LLMs</li>
+            <li>Fundamentals of AI Agents Using RAG and LangChain</li>
+            <li>IBM Generative AI Engineering</li>
+            <li>Introduction to Deep Learning & Neural Networks with Keras</li>
+            <li>Building Generative AI-Powered Applications with Python</li>
+          </ul>
+        </div>
+        <div class="cert-category">
+          <h3 class="cert-category-title">Programming & Development</h3>
+          <ul class="cert-list">
+            <li>Python for Data Science, AI & Development</li>
+            <li>Developing AI Applications with Python and Flask</li>
+            <li>Data Analysis with Python</li>
+            <li>C++ (relevant coursework)</li>
+          </ul>
+        </div>
+        <div class="cert-category">
+          <h3 class="cert-category-title">IT & Cybersecurity</h3>
+          <ul class="cert-list">
+            <li>Cyber Security CompTIA</li>
+            <li>Google IT Support (Coursera)</li>
+          </ul>
+        </div>
+      </div>
+    </div>
+  </section>
+
   <!-- Contact Section -->
   <section id="contact" class="contact">
     <div class="container">
       <div class="section-header">
-        <span class="section-number">04.</span>
+        <span class="section-number">07.</span>
         <h2 class="section-title">Get In Touch</h2>
         <div class="section-line"></div>
       </div>
@@ -403,7 +542,18 @@
           <p><strong>Phone:</strong> <a href="tel:3467029899">346-702-9899</a></p>
           <p><strong>Email:</strong> <a href="mailto:ashtondarryl@gmail.com">ashtondarryl@gmail.com</a></p>
         </div>
-        <a href="mailto:ashtondarryl@gmail.com" class="btn btn-primary btn-large">Say Hello</a>
+        <!-- Replace YOUR_FORM_ID with your Formspree form ID from https://formspree.io -->
+        <form class="contact-form" id="contact-form" action="https://formspree.io/f/YOUR_FORM_ID" method="POST">
+          <input type="hidden" name="_subject" value="Portfolio contact form submission">
+          <label for="contact-name">Name</label>
+          <input type="text" id="contact-name" name="name" required placeholder="Your name">
+          <label for="contact-email">Email</label>
+          <input type="email" id="contact-email" name="email" required placeholder="your@email.com">
+          <label for="contact-message">Message</label>
+          <textarea id="contact-message" name="message" required rows="5" placeholder="Your message"></textarea>
+          <button type="submit" class="btn btn-primary btn-large">Send Message</button>
+        </form>
+        <p class="contact-form-note">Or email me directly: <a href="mailto:ashtondarryl@gmail.com">ashtondarryl@gmail.com</a></p>
         <div class="social-links">
           <a href="https://github.com/ashtonalva" target="_blank" rel="noopener noreferrer" class="social-link" aria-label="GitHub">
             <svg width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2">
