--- a/projects/rag.html
+++ b/projects/rag.html
@@ -25,7 +25,7 @@
   </main>
 
   <footer>
-    <p>&copy; 2024 Ashton Alva. All rights reserved.</p>
+    <p>&copy; <span id="current-year"></span> Ashton Alva. All rights reserved.</p>
     <p>
       <a href="https://github.com/ashtonalva" target="_blank" rel="noopener noreferrer">GitHub</a> |
       <a href="https://linkedin.com/in/ashtonalva" target="_blank" rel="noopener noreferrer">LinkedIn</a> |
